force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/Frequency_Preference__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Preference__c</fullName>
    <label>Frequency_Preference</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Frequency_Preference</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>