force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/InternalOrganization__c.field-meta.xml
<CustomField>
    <fullName>InternalOrganization__c</fullName>
    <label>InternalOrganization</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>InternalOrganization</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>