force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/Origin_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Code__c</fullName>
    <label>Origin_Code</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Origin_Code</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>