force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/PartyIdentificationName__c.field-meta.xml
<CustomField>
    <fullName>PartyIdentificationName__c</fullName>
    <label>Party Identification Name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PartyIdentificationName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>