force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/Signup__c.field-meta.xml
<CustomField>
    <fullName>Signup__c</fullName>
    <label>Signup</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Signup</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>