force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriberKey__c</fullName>
    <label>SubscriberKey</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>SubscriberKey</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>