force-app/main/default/objects/sfmc_ent_profile_attribute_534007695__dll/fields/Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Date__c</fullName>
    <label>Subscription_Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Subscription_Date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>